# deepline-gtm-agent

./: .env.example  .gitignore  BLOG_POST.md  Dockerfile  README.md  SETUP.md  chat.html  example.py  examples.md  pyproject.toml  railway.toml  server.py  slack-manifest.json
blog/: ANTI_AI_SLOP_WRITING.md  IMAGE_PROMPTS.md  architecture-diagrams.html
deepline_gtm_agent/: __init__.py  agent.py  cost_optimization.py  deepline.py  dynamic_tools.py  formatting.py  icp.py  orgchart.py  prompts.py  redis_client.py  skills.py  slack.py  tools.py  v2_client.py  waterfall_client.py
docs/: gtm-agent-build-kit.md  notion-gtm-agent-field-guide.md  transcript-learnings-usability.md
docs/plans/: 2026-06-17-eve-additive-port-design.md  2026-06-17-eve-additive-port.md  2026-06-17-eve-slack-followup.md
eve_agent/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
eve_agent/agent/: agent.ts  instructions.md
eve_agent/evals/: copied-deepline-skills.eval.ts  evals.config.ts  skills.eval.ts  smoke.eval.ts  workflow-presets.eval.ts
eve_agent/scripts/: smoke.ts  sync-deepline-recipes.ts  sync-deepline-skills.ts
eve_agent/tests/: deepline.test.ts  (+4 more)
hermes-agent-pack/: .gitignore  HERMES.md  README.md
managed_agent/: Dockerfile  README.md  chat.html  cli.py  env.example  logs.py  requirements.txt  server.py  session.py  setup.py  sync_skills.py  workflow_presets.py
tests/: evals.yml  run_evals.py  test_managed_v2_broker.py  test_orgchart.py  test_orgchart_tool.py  test_prospect_list_job.py  test_v2_client.py  test_v2_smoke.py  test_waterfall.py
(+75 files in other folders)
