[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepline-gtm-agent"
version = "0.1.0"
description = "GTM automation agent powered by Deepline + Deep Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4",
    "langchain-anthropic>=1.4",
    "langchain-openai>=0.3",
    "httpx>=0.28",
    "redis>=5.0",
    "langgraph-checkpoint-redis>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/deepline-ai/deepline-gtm-agent"
Documentation = "https://docs.deepline.com"

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.32", "python-multipart>=0.0.12"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["deepline_gtm_agent"]
